--- a/terrain-gen/terrain-gen.vcxproj
+++ b/terrain-gen/terrain-gen.vcxproj
@@ -122,6 +122,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="FastNoise.cpp" />
     <ClCompile Include="imgui-SFML.cpp" />
     <ClCompile Include="imgui.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="BufferLayout.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Chunk.h" />
     <ClInclude Include="FastNoise.h" />
     <ClInclude Include="GLUtil.h" />
     <ClInclude Include="IndexBuffer.h" />
